@@ -14,7 +14,6 @@ import org.springframework.beans.factory.annotation.Value;
 
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static org.folio.orders.utils.CacheUtils.buildAsyncCache;
@@ -76,6 +75,6 @@ public class ConsortiumUserTenantsRetriever {
     return IntStream.range(0, userTenants.size())
       .mapToObj(userTenants::getJsonObject)
       .map(userTenant -> userTenant.getString(TENANT_ID.getValue()))
-      .collect(Collectors.toList());
+      .toList();
   }
 }
